issue in manage-campaign-deal,grouping icon alignment issue,tiles issue in edit contacts,download csv button issue in add-partners

--- a/src/app/contacts/edit-contacts/edit-contacts.component.css
+++ b/src/app/contacts/edit-contacts/edit-contacts.component.css
@@ -277,3 +277,10 @@ a.disabled{pointer-events:none;cursor:not-allowed}
 .margin-top2{
 	margin-top: 2px !important;
 }
+.row{
+	margin-right: -10px;
+    margin-left: -10px;
+}
+.pr2{
+	padding-right: 2px;
+}
